--- a/nx/blocks/media-library/views/mediainfo/mediainfo.css
+++ b/nx/blocks/media-library/views/mediainfo/mediainfo.css
@@ -13,6 +13,10 @@ svg.icon,
   color: #000;
 }
 
+button {
+  font-family: var(--font-family);
+}
+
 .save-alt-text-button,
 .cancel-alt-text-button {
   display: flex;
@@ -105,6 +109,7 @@ svg.icon,
       font-size: 18px;
       font-weight: 600;
       color: #111827;
+      white-space: nowrap;
     }
 
     sl-button {
